objects/BMCServiceDesk__BMC_ApplicationInfrastructure__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Application_Infrastructure_Type__c</fullName>
        <label>Application Infrastructure Type</label>
        <picklist>
            <picklistValues>
                <fullName>Application Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siebel Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clustered Application Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (default)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Infrastructure_Instance_Type__c</fullName>
        <label>Infrastructure Instance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>